frontend/css/app.scss
@import "normalize";

@import "button";
@import "datepicker";
@import "form";
@import "loading";
@import "table";

.sm-ml {
  margin-left: 5px;
}

#notifications {
  position: absolute;
  bottom: 15px;
  left: 0;

  div.notification {
    transition: opacity 0.25s ease-in-out;

    span {
      display: inline-block;
      margin: 5px 0 0 15px;
      padding: 10px 15px;

      background: black;

      color: white;
      font-size: 0.8em;
      font-weight: 300;

      cursor: pointer;
    }

    &.hidden {
      opacity: 0;
    }
  }
}

#app, .app, .wrapper {
  height: 100%;
}

.app {
  display: flex;
  flex-direction: column;
}

.toolbar {
  display: flex;
  flex: 0 0 auto;
  flex-direction: row;
  align-items: center;

  padding: 0.4em;

  border-bottom: 1px solid #DEDEDE;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);

  .sidebar-toggle {
    display: block;
    float: left;
    margin: 0 5px;
    padding: 1px 0 0 0;
    height: 20px;
  }

  .team-name, .clock, .menu {
    flex: 1 1 33%;
  }

  .team-name {
    color: #000;
    font-size: 0.8em;
    font-weight: 700;
    text-transform: uppercase;

    overflow: hidden;

    a.logo {
      display: block;
      float: left;

      width: 70%;

      padding: 4px 0 0 0;

      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    white-space: nowrap;
  }

  .clock {
    cursor: default;
    text-align: center;
  }

  .menu ul {
    list-style-type: none;

    overflow: hidden;
    margin: 0 5px;

    li {
      padding: 1px 0 0 0;
      float: right;

      a {
        display: block;
        height: 20px;
      }
    }
  }
}

.content {
  display: flex;
  flex: 1 1 auto;
  flex-direction: row;

  overflow: hidden;

  .sidebar::-webkit-scrollbar {
    width: 0 !important;
  }

  .sidebar {
    flex: 0 0 auto;
    width: 270px;
    padding: 10px;
    box-sizing: border-box;

    overflow: scroll;

    border-right: 1px solid #F2F2F2;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);

    will-change: margin-left;
    transition: margin-left 0.3s cubic-bezier(0,0,0.3,1);

    &.animating {
      transition: none;
    }

    &.hidden {
      margin-left: -276px;
    }

    &.shown {
      margin-left: 0px;
    }

    .menu {
      margin: 0;
      padding: 0;

      list-style-type: none;

      li a {
        display: block;
        padding: 7px 10px;

        color: #777;
        font-weight: 300;
        text-transform: uppercase;

        &:hover {
          color: #333;

          background: #FAFAFA;
        }

        transition: all 0.2s ease;
      }
    }
  }

  .page, .team {
    padding: 15px 3px;

    overflow: scroll;
  }

  .page {
    flex: 1 1 auto;

    display: flex;
    flex-direction: column;

    padding: 10px;

    .page-header,
    .page-content {
      min-width: 540px;
    }

    .page-header {
      flex: 0 1 auto;

      h1, ul.tabs {
        border-bottom: 1px solid #F9F9F9;

        cursor: default;
        text-transform: uppercase;

        margin: 0;
        padding: 5px;
      }

      h1 {
        font-size: 1.2em;
      }

      ul.tabs {
        list-style-type: none;

        padding: 0;

        overflow: hidden;

        li {
          margin-right: 10px;

          float: left;

          a {
            display: block;

            padding: 5px;

            font-weight: 300;
          }

          &.active {
            a {
              font-weight: 700;
            }

            border-bottom: 1px solid rgb(154, 204, 104);
          }
        }
      }
    }

    .page-content {
      flex: 1 1 auto;

      p {
        padding: 3px 5px;

        font-size: 0.9em;
        font-weight: 300;
      }

      p.small {
        font-size: 0.7em;
        font-weight: 300;
      }
    }
  }

  .team {
    flex: 1 1 auto;

    display: flex;
    flex-direction: row;
    align-items: stretch;

    .zone {
      position: relative;  // fixes scoll in .overlay

      flex: 0 0 auto;

      margin: 0 7px;
      width: 192px;

      &--fluid {
        width: 100;
      }

      h4, h6 {
        cursor: default;

        line-height: 0;
        text-align: center;
        text-transform: uppercase;
      }

      h6 {
        margin-top: 10px;
      }

      h6 {
        color: #999;
      }

      ul {
        margin: 0;
        padding: 0;

        list-style-type: none;

        text-align: center;

        li {
          float: left;

          margin: 5px 7px;

          a.avatar,
          a.avatar img,
          a.initials {
            display: table-cell;

            height: 50px;
            width: 50px;

            border-radius: 50%;

            transition: all 0.25s ease-in;
          }

          a.initials {
            display: table-cell;

            color: white;
            font-size: 1.3em;
            text-align: center;
            vertical-align: middle;
          }

          div.overlay {
            position: absolute;
            display: none;

            color: #333;
            cursor: default;
            font-size: 0.6em;
            font-weight: 300;
            text-align: center;
            text-transform: uppercase;

            width: 150px;
            margin-left: -50px;
            margin-top: -10px;
          }

          &:hover {
            div.overlay {
              display: block;

              span {
                background: white;

                padding: 2px 3px;

                border-radius: 2px;
              }
            }
          }

          &.offline {
            opacity: 0.25;

            a.avatar img,
            a.initials {
              -webkit-filter: grayscale(100%);
              filter: grayscale(100%);
            }
          }
        }
      }
    }
  }

  .workday {
    width: 400px;

    div.input {
      flex: 0 1 auto;
    }

    label.workday-label {
      flex: 1 0 auto;
      text-align: center;
    }
  }
}

.profile-page {
  display: flex;

  .profile-sidebar {
    flex: 0 1 auto;

    width: 270px;
    padding: 10px;
    box-sizing: border-box;
  }

  .profile-content {
    min-width: 500px;

    flex: 1 1 auto;
    padding: 10px 10px 10px 0;
    box-sizing: border-box;

    h4 {
      margin: 5px 0;
    }
  }
}

.user-profile {
  .avatar {
    background: #CCC;
    height: 250px;
    width: 250px;

    transition: all 0.25 ease-in;

    img {
      height: 250px;
      width: 250px;
    }

    .initials {
      display: table-cell;

      width: 250px;
      height: 250px;

      color: #FFF;
      cursor: default;
      font-size: 4em;
      text-align: center;
      vertical-align: middle;
    }
  }

  h3, h6 {
    cursor: default;
  }

  h3 {
    margin-bottom: 0;

    color: #000;
    line-height: 1em;
    text-align: center;
    text-transform: uppercase;
  }

  h6 {
    margin-top: 0.8em;

    color: #AAA;
    line-height: 0em;
    text-align: center;
    text-transform: uppercase;
  }
}

.billing-overview {
  margin-top: 1em;

  tbody {
    tr > td:first-child {
      background: #F9F9F9;
      border-right: 1px solid #F2F2F2;
      width: 120px;
    }
  }
}

.scheduler {
  display: flex;
  flex-direction: column;

  .column {
    flex: 1 1 auto;

    &:first-child {
      flex: 0 0 auto;
    }

    textarea {
      height: 150px;
    }

    table {
      width: 100%;

      td:first-child {
        text-align: center;
      }

      tr.offline td {
        opacity: 0.25;
      }
    }
  }

  .range {
    display: flex;
    align-items: center;
  }

  input[type=text].summary {
    margin: 10px 0;
    margin-bottom: 0;

    width: 447px;
  }

  .description {
    margin: 10px 0;

    height: 75px;
    width: 447px;
    max-width: 447px;
  }

  span {
    display: block;

    margin: 0 10px;
  }

  input[type=text] {
    width: 135px;
  }

  .timepicker, .duration {
    margin-left: 5px;
  }

  .elm-datepicker--picker {
    width: 190px;
  }
}

.meeting {
  display: flex;
  flex-direction: column;

  .column {
    flex: 1 1 auto;
  }

  h4, h5, h6 {
    margin-left: 5px;
  }

  h4 {
    margin-bottom: 0.25em;
  }

  h5 {
    margin-bottom: 0.25em;
  }

  h5, h6 {
    margin-top: 0;
  }

  .summary {
    font-weight: 400;
  }

  .description {
    white-space: pre-wrap;
  }
}

@media (max-width: 375px) {
  .sidebar {
    margin-left: -275px;
  }

  .content {
    .team {
      flex-direction: column;

      .zone {
        flex: 1 1 auto;
        width: 100%;
        margin: 0 0 1em 0;
        padding: 1em;
        box-sizing: border-box;
      }
    }
  }
}

@media (min-width: 1200px) {
  .scheduler {
    display: flex;
    flex-direction: row;

    .column {
      flex: 1 1 auto;

      &:first-child {
        flex: 0 0 480px;
      }
    }
  }

  .meeting {
    display: flex;
    flex-direction: row;

    .column {
      flex: 1 1 50%;
    }
  }
}

